# imitune-frontend

./: .gitignore  CNAME  README.md  package-lock.json
.github/workflows/: gh-pages.yml
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
desktop/src-tauri/src/: main.rs
web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
web/public/: README-model.txt
web/src/: App.css  App.tsx  index.css
web/src/components/: Recorder.tsx  Results.tsx
web/src/lib/api/: ratings.ts  search.ts
web/src/lib/audio/: recorder.ts
web/src/lib/model/: embedding.ts
web/src/worklets/: pcm-collector.worklet.js
